# language

./: .gitmodules  README.md  asmod.py  compiler.py  compiler2.py  dismod.py  graph.py  lrkit  mod.py  parser.py  proxy.py  structures.py
demos/: bottles  except  factorial  greenlets  hello  iterators  list  scratch
docs/: oop.md
pad/: codecard.py  lr.py  pad
parser/: __init__.py  lookahead.py
parser/samples/: calls  placeholder  sentence
parser2/: demo.py  lr.py  test  tokenizer.py
parser2/lrkit/: __init__.py  canonical.py  grammar.py  manual.md  rule.py  snerror.py  tokenizer.py
runtime/: CMakeLists.txt  __init__.py  build.sh  gc.c  gc.h  interpreter.c  system.c  value.c  value.h
runtime/inc/: api.h  closure.h  cmp.h  context.h  dict.h  gc.h  greenlet.h  interfaces.h  list.h  objects.h  stack.h  vm.h
runtime/src/: api.c  baselib.c  builtin.c  closure.c  cmp.c  context.c  dict.c  gc.c  greenlet.c  interfaces.c  list.c  main.c  module.c  objects.c  path.c  stack.c  string.c  type.c  vm.c
runtime/tools/: bytecode-format.py
runtime3/: CMakeLists.txt
runtime3/inc/: api.h  closure.h  cmp.h  context.h  dict.h  gc.h  greenlet.h  list.h  stack.h  value.h
runtime3/src/: api.c  baselib.c  cmp.c  dict.c  list.c  main.c  stack.c  string.c  value.c  vm.c
runtime3/tools/: bytecode-format.py
samples/: functions  operators  slices  terms
snakelisp/: README.md  base.sl  cps.py  demo  demo.c  lisp.py  parser.py  parser.sl  snakelisp.c  snakelisp.h  snakelisp.vim  transpiler.py  visuals.py
snakelisp/tests/: conditionals.sl  function.sl  hello.sl  while.sl  (+1 more)
